--- a/about/grid.css
+++ b/about/grid.css
@@ -7,8 +7,13 @@ body {
 }
 
 .container {
+  display: flex;
+  flex-direction: column;
+}
+.row {
   width: 100%;
   display: flex;
+  flex-direction: row;
 }
 
 [class^=col-] {
