--- a/about/style.css
+++ b/about/style.css
@@ -1,4 +1,20 @@
 html, body {
   width: 100%;
   height: 100%;
+  background-color: aliceblue;
+}
+
+.container {
+  margin: 4rem auto;
+  width: 80%;
+}
+
+.header {
+  padding: 1rem;
+  font-size: 2rem;
+}
+
+.description,
+.listing {
+  padding: 1rem;
 }
