--- a/about/grid.css
+++ b/about/grid.css
@@ -1,6 +1,3 @@
-* {
-  background-color: rgba(0, 0, 0, 0.1);
-}
 
 body {
   margin: 0;
@@ -17,7 +14,9 @@ body {
 }
 
 [class^=col-] {
-  margin: 0 1%;
+  /* margin: 0 1%; */
+  display: flex;
+  flex-direction: column;
 }
 
 [class^=col-]:first-child {
@@ -29,17 +28,30 @@ body {
 }
 
 .col-1 {
-  display: flex;
   flex: 1;
 }
 
 .col-2 {
-  display: flex;
   flex: 2;
 }
 
-
 .col-3{
-  display: flex;
   flex: 3;
+}
+
+.desktop {
+  display: initial;
+}
+
+@media only screen and (max-width: 1024px) {
+  .container {
+    margin: 0;
+    width: 100%;
+  }
+  .row {
+    flex-direction: column;
+  }
+  .desktop {
+    display: none;
+  }
 }
