--- a/about/style.css
+++ b/about/style.css
@@ -1,20 +1,158 @@
-html, body {
-  width: 100%;
-  height: 100%;
-  background-color: aliceblue;
+/* Colors definition */
+
+:root {
+  --color1: rgba(220, 220, 221, 1);
+  --color2: rgba(197, 195, 198, 1);
+  --color3: rgba(70, 73, 76, 1);
+  --color4: rgba(76, 92, 104, 1);
+  --color5: #68564c;
 }
 
+/* Document */
+
+html, body {  
+  background-color: var(--color1);
+  font-size: 120%;
+}
+
+a {
+  color: inherit; /* blue colors for links too */
+  text-decoration: inherit; /* no underline */
+}
+
+
+h1, h2, h3 {
+  margin: 0;
+}
+
+h1 {
+  font-size: 2rem;
+  line-height: 4rem;
+}
+
+h2 {
+  font-size: 1.5rem;
+}
+
+h3 {
+  font-size: 1.1rem;
+}
+
+button {
+  width: 110px;
+  height: 40px;
+  font-size: 1rem;
+  border: none;
+  color: var(--color1);
+  background-color: var(--color4);
+  border-radius: 4px;
+  margin: 1rem;
+  cursor: pointer;
+}
+
+li {
+  margin: 0.15rem 0;
+}
+
+/* General */
+
 .container {
-  margin: 4rem auto;
-  width: 80%;
+  margin: 1% auto;
+  width: 60%;
+  background-color: var(--color2);  
 }
 
 .header {
   padding: 1rem;
   font-size: 2rem;
+  background-color: var(--color4);
+  color: var(--color1);
+}
+
+.header h3 {
+  margin: 1rem 0;  
 }
 
 .description,
-.listing {
+.listing,
+.profile,
+.title {
   padding: 1rem;
+}
+
+.title {
+  font-weight: 700;
+  padding: 1rem 1rem 0 1rem;
+}
+
+.profile {
+  display: flex;
+  align-items: flex-end;
+}
+
+.link {
+  border-bottom: 2px solid black;
+}
+
+.link:hover {
+  border-color: var(--color1);
+  color: var(--color1);
+}
+
+/* Listing */
+
+.listing a:hover {
+  color: var(--color1);
+  background-color: var(--color4);
+}
+
+.listing > h2 {
+  padding: 0.5rem;
+  color: var(--color1);
+  background-color: var(--color4);
+  height: 1rem;
+  line-height: 1rem;
+}
+
+.filled .header {
+  font-size: 1.1rem;
+  line-height: 1.1rem;
+  color: var(--color1);
+  background-color: var(--color4);
+  padding: 0.5rem;
+}
+
+.filled .content {
+  border-width: 0 2px 2px 2px;
+  border-color:  var(--color4);
+  border-style: solid;
+}
+
+.filled .content ol {
+  padding: 0.5rem;
+  -webkit-padding-start: 40px;
+  
+}
+
+.filled .content p {
+  padding: 0.5rem;
+}
+
+.header.emphasis {
+  background-color: var(--color5);
+}
+
+.content.emphasis {
+  border-color: var(--color5); 
+}
+/* Image */
+
+.profile img {
+  width: 15em;
+}
+
+/* Back button */
+
+div.back {
+  flex-direction: row-reverse;
 }
