--- a/about/style.css
+++ b/about/style.css
@@ -1,17 +1,7 @@
-/* Colors definition */
-
-:root {
-  --color1: rgba(220, 220, 221, 1);
-  --color2: rgba(197, 195, 198, 1);
-  --color3: rgba(70, 73, 76, 1);
-  --color4: rgba(76, 92, 104, 1);
-  --color5: #68564c;
-}
-
 /* Document */
 
 html, body {  
-  background-color: var(--color1);
+  background-color: rgba(220, 220, 221, 1);
   font-size: 120%;
 }
 
@@ -43,8 +33,8 @@ button {
   height: 40px;
   font-size: 1rem;
   border: none;
-  color: var(--color1);
-  background-color: var(--color4);
+  color: rgba(220, 220, 221, 1);
+  background-color: rgba(76, 92, 104, 1);
   border-radius: 4px;
   margin: 1rem;
   cursor: pointer;
@@ -59,14 +49,14 @@ li {
 .container {
   margin: 1% auto;
   width: 60%;
-  background-color: var(--color2);  
+  background-color: rgba(197, 195, 198, 1);  
 }
 
 .header {
   padding: 1rem;
   font-size: 2rem;
-  background-color: var(--color4);
-  color: var(--color1);
+  background-color: rgba(76, 92, 104, 1);
+  color: rgba(220, 220, 221, 1);
 }
 
 .header h3 {
@@ -95,44 +85,43 @@ li {
 }
 
 .link:hover {
-  border-color: var(--color1);
-  color: var(--color1);
+  border-color: rgba(220, 220, 221, 1);
+  color: rgba(220, 220, 221, 1);
 }
 
 /* Listing */
 
 .listing a:hover {
-  color: var(--color1);
-  background-color: var(--color4);
+  color: rgba(220, 220, 221, 1);
+  background-color: rgba(76, 92, 104, 1);
 }
 
 .listing > h2 {
   padding: 0.5rem;
-  color: var(--color1);
-  background-color: var(--color4);
-  height: 1rem;
-  line-height: 1rem;
+  color: rgba(220, 220, 221, 1);
+  background-color: rgba(76, 92, 104, 1);
+  line-height: 1.5rem;
 }
 
 .filled .header {
   font-size: 1.1rem;
   line-height: 1.1rem;
-  color: var(--color1);
-  background-color: var(--color4);
+  color: rgba(220, 220, 221, 1);
+  background-color: rgba(76, 92, 104, 1);
   padding: 0.5rem;
 }
 
 .filled .footer {
   font-size: 1.1rem;
   line-height: 1.1rem;
-  color: var(--color1);
-  background-color: var(--color3);
+  color: rgba(220, 220, 221, 1);
+  background-color: rgba(70, 73, 76, 1);
   padding: 0.5rem;
 }
 
 .filled .content {
   border-width: 0 2px 2px 2px;
-  border-color:  var(--color4);
+  border-color:  rgba(76, 92, 104, 1);
   border-style: solid;
 }
 
@@ -147,11 +136,11 @@ li {
 }
 
 .header.emphasis {
-  background-color: var(--color5);
+  background-color: #68564c;
 }
 
 .content.emphasis {
-  border-color: var(--color5); 
+  border-color: #68564c; 
 }
 /* Image */
 
