--- a/about/grid.css
+++ b/about/grid.css
@@ -14,7 +14,6 @@ body {
 }
 
 [class^=col-] {
-  /* margin: 0 1%; */
   display: flex;
   flex-direction: column;
 }
@@ -43,11 +42,14 @@ body {
   display: initial;
 }
 
-@media only screen and (max-width: 1024px) {
+@media only screen and (max-width: 1536px) {
   .container {
     margin: 0;
     width: 100%;
   }
+}
+
+@media only screen and (max-width: 1024px) {
   .row {
     flex-direction: column;
   }
