--- a/about/style.css
+++ b/about/style.css
@@ -28,9 +28,10 @@ h3 {
   font-size: 1.1rem;
 }
 
-button {
+.button {
   width: 110px;
   height: 40px;
+  line-height: 40px;
   font-size: 1rem;
   border: none;
   color: rgba(220, 220, 221, 1);
@@ -38,6 +39,7 @@ button {
   border-radius: 4px;
   margin: 1rem;
   cursor: pointer;
+  text-align: center;
 }
 
 li {
