CSS, opinion model, course page

--- a/final-project/src/assets/css/index.css
+++ b/final-project/src/assets/css/index.css
@@ -37,6 +37,9 @@ h3 {
 li {
   margin: 0.15rem 0; }
 
+button {
+  background-color: none; }
+
 /* General */
 .container {
   margin: 1% auto;
@@ -72,6 +75,21 @@ li {
 .link:hover {
   border-color: #dcdcdd;
   color: #dcdcdd; }
+
+.opinion {
+  font-weight: 700;
+  padding-top: 1rem; }
+
+.button--opinion {
+  font-size: 0.75rem;
+  width: 180px;
+  margin: 0 0 0 1rem; }
+
+.title {
+  flex-direction: row; }
+  .title .name {
+    line-height: 2rem;
+    font-size: 1rem; }
 
 /* Listing */
 .listing a:hover {
