--- a/final-project/src/assets/scss/_document.scss
+++ b/final-project/src/assets/scss/_document.scss
@@ -2,7 +2,8 @@
 
 html, body {  
   background-color: rgba(220, 220, 221, 1);
-  font-size: 120%;
+  font-size: 100%;
+  font-family: 'Roboto Condensed', sans-serif;
 }
 
 a {
