--- a/final-project/src/assets/scss/index.scss
+++ b/final-project/src/assets/scss/index.scss
@@ -1,5 +1,4 @@
-@import 'document.scss';
+@import 'reset.scss';
 @import 'general.scss';
-@import 'semester.scss';
 @import 'listing.scss';
 @import 'responsive.scss';
