--- a/final-project/src/assets/css/index.css
+++ b/final-project/src/assets/css/index.css
@@ -1,66 +1,46 @@
-html, body {
-  background-color: #dcdcdd;
-  font-size: 100%;
-  font-family: 'Roboto Condensed', sans-serif; }
-
+@import url("https://fonts.googleapis.com/css?family=Roboto+Condensed");
 a {
-  color: inherit;
-  /* blue colors for links too */
-  text-decoration: inherit;
-  /* no underline */ }
+  text-decoration: none;
+  color: inherit; }
 
 h1, h2, h3 {
   margin: 0; }
 
-h1 {
-  font-size: 2rem;
-  line-height: 4rem; }
+body {
+  font-family: 'Roboto Condensed', sans-serif; }
 
-h2 {
-  font-size: 1.5rem; }
+.profile,
+.title {
+  padding: 1rem; }
 
-h3 {
-  font-size: 1.1rem; }
-
-.button {
-  width: 110px;
-  height: 40px;
-  line-height: 40px;
-  font-size: 1rem;
-  border: none;
-  color: #dcdcdd;
-  background-color: #4c5c68;
-  border-radius: 4px;
-  margin: 1rem;
-  cursor: pointer;
-  text-align: center; }
-
-li {
-  margin: 0.15rem 0; }
-
-button {
-  background-color: none; }
-
-/* General */
 .container {
   margin: 1% auto;
-  width: 60%;
-  background-color: #c5c3c6; }
+  width: 70%;
+  background-color: #c5c3c6;
+  border-top-left-radius: 8px;
+  border-top-right-radius: 8px;
+  border-bottom-left-radius: 8px;
+  border-bottom-right-radius: 8px; }
 
 .header {
   padding: 1rem;
   font-size: 2rem;
   background-color: #4c5c68;
-  color: #dcdcdd; }
-
-.header h3 {
-  margin: 1rem 0; }
-
-.description,
-.listing,
-.profile,
-.title {
-  padding: 1rem; }
+  color: #dcdcdd;
+  border-top-left-radius: 8px;
+  border-top-right-radius: 8px; }
+  .header h1, .header h2 {
+    margin: 0.5rem; }
+  .header h1 {
+    font-size: 2rem;
+    margin-bottom: 0; }
+  .header h2 {
+    font-size: 1.5rem;
+    font-weight: 500; }
+  .header h3 {
+    margin: 0 0.5rem;
+    font-size: 1rem;
+    font-weight: 100; }
 
 .title {
   font-weight: 700;
@@ -70,49 +50,47 @@ button {
   display: flex;
   align-items: flex-end; }
 
-.link {
-  border-bottom: 2px solid black; }
-
-.link:hover {
-  border-color: #dcdcdd;
-  color: #dcdcdd; }
+.link, a {
+  color: #000000;
+  border-bottom: 1px dotted #000000; }
+  .link:hover, a:hover {
+    color: #dcdcdd;
+    border-bottom-color: #dcdcdd; }
 
 .footer {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 2rem 0; }
-  .footer span {
-    text-align: center; }
-
-.button--opinion {
-  font-size: 0.75rem;
-  width: 180px;
-  margin: 0 0 0 1rem; }
-
-.title {
-  flex-direction: row; }
-  .title .name {
-    line-height: 2rem;
-    font-size: 1rem; }
+  padding: 2rem 0;
+  text-align: center; }
 
 /* Listing */
-.listing a:hover {
-  color: #dcdcdd;
-  background-color: #4c5c68; }
+.description,
+.listing {
+  padding: 1rem; }
 
 .listing > h2 {
   padding: 0.5rem;
   color: #dcdcdd;
   background-color: #4c5c68;
-  line-height: 1.5rem; }
+  line-height: 1.5rem;
+  border-radius: 4px; }
+
+.listing li {
+  list-style: circle;
+  margin-bottom: 0.2rem; }
+
+.profile img {
+  width: 15em; }
 
 .filled .header {
   font-size: 1.1rem;
   line-height: 1.1rem;
   color: #dcdcdd;
   background-color: #4c5c68;
-  padding: 0.5rem; }
+  padding: 0.5rem;
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px; }
 
 .filled .footer {
   font-size: 1.1rem;
@@ -124,28 +102,19 @@ button {
 .filled .content {
   border-width: 0 2px 2px 2px;
   border-color: #4c5c68;
-  border-style: solid; }
-
-.filled .content ol {
-  padding: 0.5rem;
-  -webkit-padding-start: 40px; }
-
-.filled .content p {
-  padding: 0.5rem; }
+  border-style: solid;
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px; }
+  .filled .content.emphasis {
+    border-color: #68564c; }
+  .filled .content ol {
+    padding: 0.5rem;
+    -webkit-padding-start: 40px; }
+  .filled .content p {
+    padding: 0.5rem; }
 
 .header.emphasis {
   background-color: #68564c; }
-
-.content.emphasis {
-  border-color: #68564c; }
-
-/* Image */
-.profile img {
-  width: 15em; }
-
-/* Back button */
-div.back {
-  flex-direction: row-reverse; }
 
 .desktop {
   display: initial; }
