--- a/final-project/src/assets/scss/course.scss
+++ b/final-project/src/assets/scss/course.scss
@@ -38,11 +38,11 @@
     }
 
     input, textarea {
+      @include shadow();
+      
       font-family: inherit;
       font-size: 0.8rem;
-      -webkit-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.2);
-      -moz-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.2);
-      box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.2);
+      
       &:valid {
         box-shadow: 0 0 5px 1px green;
       }
