--- a/final-project/src/assets/css/index.css
+++ b/final-project/src/assets/css/index.css
@@ -122,9 +122,10 @@ body {
 @media only screen and (max-width: 1248px) {
   .container {
     margin: 0;
-    width: 100%; } }
-
-@media only screen and (max-width: 1248px) {
+    width: 100%;
+    border-radius: 0; }
+  .header {
+    border-radius: 0; }
   .row {
     flex-direction: column; }
   .desktop {
